Fix a typo in Dockerfile

--- a/tools/docker/Dockerfile.jinja
+++ b/tools/docker/Dockerfile.jinja
@@ -309,7 +309,7 @@ FROM build-grub as grub
 # EFI handover boot, which is deprecated. So we have to build GRUB from source.
 WORKDIR /root
 # See also: https://github.com/asterinas/asterinas/pull/1710
-RUN git clone --single-branch -b asterinas/2.12 https://github.com/asterinas/grub.git
+RUN git clone --single-branch -b asterinas/2.12 https://github.com/asterinas/grub.git \
     && git -C grub checkout 0633bc8
 # Fetch and install the Unicode font data for grub.
 RUN wget -O unifont.pcf.gz https://unifoundry.com/pub/unifont/unifont-15.1.04/font-builds/unifont-15.1.04.pcf.gz \ 
