Add yq to asterinas image

--- a/tools/docker/Dockerfile.jinja
+++ b/tools/docker/Dockerfile.jinja
@@ -25,6 +25,7 @@ RUN apt update && apt-get install -y --no-install-recommends \
     unzip \
     wget \
     zip
+RUN pip install yq
 
 #= Download dependency =====================================================
 
